# numpy_swig_demo

./: CMakeLists.txt  test.py  testlib.cpp  testlib.h  testlib.i
